Primeira Versão sem correções

--- a/01-elementos-pre-textuais/lista-siglas.tex
+++ b/01-elementos-pre-textuais/lista-siglas.tex
@@ -3,6 +3,9 @@
 %
 
 \begin{siglas}
-    \item[ABNT] Associação Brasileira de Normas Técnicas
+	\item[CEFET-MG] Centro Federal de Educação Tecnológica de Minas Gerais
     \item[DECOM] Departamento de Computação
+	\item[P] Controlador Proporcional
+	\item[PI] Controlador Proporcional Integral	
+	\item[PID] Controlador Proporcional Integral Derivativo
 \end{siglas}
