--- a/01-elementos-pre-textuais/lista-simbolos.tex
+++ b/01-elementos-pre-textuais/lista-simbolos.tex
@@ -3,9 +3,31 @@
 %
 
 \begin{simbolos}
-    \item[$ \omega _{d} $] Velocidade angular desejada
-    \item[$ \omega _{c} $] Velocidade angular passada para primeira malha de controle
-    \item[$ \omega _{r} $] Velocidade angular real do robô
-    \item[$ \lambda $] Comprimento de ondada
-    \item[$ \in $] Pertence
+	\item[$R$] Raio de distância do alvo
+	\item[$\theta$] Sentido no plano cartesiano
+	\item[$v$] Velocidade linear
+	\item[$\omega$] Velocidade angular
+	\item[($x_{a},y_{a}$)] Coordenadas do alvo no plano cartesiano
+	\item[$\omega_{d}$] Velocidade angular desejada
+	\item[($x_{r},y_{r}$)] Coordenadas do robô no plano cartesiano
+	\item[($x_{d},y_{d}$)] Coordenadas desejadas do robô no plano cartesiano
+	\item[$e_{r}$] Vetor de erro de posição
+	\item[$r_{d}$] Vetor de distância da origem do plano cartesiano ao ponto desejado
+	\item[$r_{r}$] Vetor de distância da origem do plano cartesiano ao robô
+	\item[$e_{x}$] Erro de posição no eixo x
+	\item[$e_{y}$] Erro de posição no eixo y
+	\item[$\theta_{d}$] Sentido desejado no plano cartesiano
+	\item[$\theta_{r}$] Sentido real do robô no plano cartesiano
+	\item[$e_{\theta}$] Sentido no plano cartesiano
+	\item[$T$] Período de rotação ao redor do alvo
+	\item[$ \omega _{c} $] Velocidade angular passada para primeira malha de controle
+	\item[$ \omega _{r} $] Velocidade angular real do robô
+	\item[$ \omega _{dr} $] Velocidade angular desejada da roda direita
+	\item[$ \omega _{dl} $] Velocidade angular desejada da roda esquerda
+    \item[$ \omega _{rr} $] Velocidade angular real da roda direita
+    \item[$ \omega _{rl} $] Velocidade angular real da roda esquerda
+    \item[$  e_{wr} $] Erro de velocidade angular da roda direita 
+    \item[$  e_{wl} $] Erro de velocidade angular da roda esquerda
+    \item[$  pwm_{r} $] Potência da roda direita 
+    \item[$  pwm_{l} $] Potência da roda esquerda
 \end{simbolos}
