--- a/refbase.bib
+++ b/refbase.bib
@@ -19,6 +19,13 @@
 	year = 2008
 }
 
+@article{leal2009reconfigurable,
+	title={Reconfigurable multi robot society based on Lego mindstorms},
+	author={Leal Martinez, David and others},
+	year={2009},
+	publisher={Helsinki University of Technology}
+}
+
 @article{RSDH2004,
 	author = {Ramchurn, Sarvapali D. and Huynh, Dong and Jennings, Nicholas R.},
 	title = {Trust in Multi-agent Systems},
@@ -52,6 +59,16 @@
 	publisher={Argentina}
 }
 
+@INPROCEEDINGS{BDCMGA09, 
+	author={Benedettelli, D. and Casini, M. and Garulli, A. and Giannitrapani, A. and Vicino, A.}, 
+	booktitle={Control Applications, (CCA) Intelligent Control, (ISIC), 2009 IEEE}, 
+	title={A LEGO Mindstorms experimental setup for multi-agent systems}, 
+	year={2009}, 
+	month={July}, 
+	pages={1230-1235}, 
+	keywords={decentralised control;mobile robots;motion control;multi-agent systems;LEGO Mindstorms;circular motion;cooperative control;decentralized control;formation control;motion coordination;multiagent systems;multiple vehicle system;nonholonomic vehicle;Communication system control;Control systems;Costs;Motion control;Multiagent systems;Quantization;Scalability;System testing;Time measurement;Vehicles}, 
+	doi={10.1109/CCA.2009.5280717},}
+
 @INPROCEEDINGS{HCWSNX02, 
 	author={Heping Chen and Weihua Sheng and Ning Xi and Mumin Song and Yifan Chen}, 
 	booktitle={Robotics and Automation, 2002. Proceedings. ICRA '02. IEEE International Conference on}, 
@@ -62,6 +79,14 @@
 	pages={450-455 vol.1}, 
 	keywords={automobile industry;industrial robots;path planning;spray coating techniques;thickness control;CAD-guided system;automobile industry;industrial robots;paint gun trajectory generation;paint thickness verification;spray painting;trajectory planning;Automotive engineering;Computer aided manufacturing;Education;Geometry;Manufacturing automation;Painting;Paints;Robotics and automation;Spraying;Trajectory}, 
 	doi={10.1109/ROBOT.2002.1013401}
+}
+
+@inproceedings{casini2011lego,
+	title={A LEGO Mindstorms multi-robot setup in the Automatic Control Telelab},
+	author={Casini, Marco and Garulli, Andrea and Giannitrapani, Antonio and Vicino, Antonio},
+	booktitle={Proceedings of 18th IFAC World Congress, Milano, Italy},
+	volume={28},
+	year={2011}
 }
 
 @phdthesis{JTA13,
@@ -125,4 +150,15 @@
 	author={Gouv{\^e}a, Josiel Alves},
 	year={2011},
 	school={Universidade Federal do Rio de Janeiro}
+}
+
+@article{balch1998behavior,
+	title={Behavior-based formation control for multirobot teams},
+	author={Balch, Tucker and Arkin, Ronald C},
+	journal={Robotics and Automation, IEEE Transactions on},
+	volume={14},
+	number={6},
+	pages={926--939},
+	year={1998},
+	publisher={IEEE}
 }
