--- a/02-elementos-textuais/trab-relacionados.tex
+++ b/02-elementos-textuais/trab-relacionados.tex
@@ -1,141 +1,15 @@
 %
 % Documento: Trabalhos Relacionados
 %
-
 \chapter{Trabalhos Relacionados}
+\label{chap:trabalhosRelacionados}
+Com o interesse cada vez mais crescente na área de robótica móvel e sistemas multiagentes, tem uma demanda cada vez maior para estudos nestas áreas. O \emph{Lego\textregistered Mindstorms} não é uma plataforma muito interessante de aplicação desses conceitos , entretanto, é uma excelente plataforma a ser utilizada nos estudos dos mesmos. Isto por que, é uma plataforma acessível, existe muita documentação auxiliar, muitos trabalhos relacionados a respeito e é muito simples de ser utilizada. Logo, vê-se muitos trabalhos relacionados a este, que envolvem o estudo da robótica móvel e de sistemas multiagentes.
 
-Este capítulo inclui muitas citações bibliográficas. Os principais
-itens de bibliografia citados são livros, artigos em conferências,
-artigos em {\textit journals} e páginas Web. A bibliografia deve seguir o
-padrão ABNT\index{ABNT}\footnote{Este não é o endereço oficial da
-ABNT pois as Normas Técnicas oficiais são pagas e não estão disponíveis na Web.}.
+Existem muitos trabalhos distintos com sistemas multiagentes utilizando-se \emph{Lego\textregistered Mindstorms}, com as mais diversas configurações, objetivos distintos, e diferentes estruturas de rede, dentre outros. Entretanto, uma dificuldade reconhecida em todos os trabalhos são as limitações da plataforma, que possui uma quantidade de conexões e tipo de comunicação muito limitada. Para que essa limitação seja superada perde-se uma característica importante da plataforma, que é a simplicidade e facilidade de implementação. O protocolo de comunicação disponível só permite a comunicação \emph{'Master/Slave'} realizada de forma manual. 
 
-A bibliografia é feita no padrão {\ttfamily bibtex}.
-As referências são colocadas em um arquivo separado.
-Os elementos de cada item bibliográfico que devem constar na bibliografia são apresentados a seguir.
+Outras configurações, requerem uma implementação mais complexa que afeta o custo/benefício de se utilizar essa plataforma, por perder a característica de implementação simples. Pode-se citar como um desses trabalhos, que abordam de forma mais dinâmica e independente a comunicação entre os robôs, \citeonline{leal2009reconfigurable}. Seu trabalho consiste em uma sociedade que se configura de forma autônoma, ou seja,  indivíduos independentes que se agrupam e formam uma sociedade.
 
-Para livros, o formato da bibliografia no arquivo fonte é o seguinte:
+Entre os trabalhos relacionados a este podemos citar, \citeonline{BDCMGA09} que propõe uma configuração experimental para utilizar o \emph{Lego\textregistered Mindstorms} como ferramenta de estudos de estratégias de controle de sistemas multiagentes. Ele utiliza uma frota composta por quatro robôs, uma \emph{webcam} e o \emph{MATLAB\textregistered}. Com o intuito de se obter uma ferramenta de baixo custo para dar aulas de laboratório de robótica, seu trabalho consiste em propor uma configuração que permita a implementação, comparação e o estudo de diversas estratégias de controle e algoritmos. Uma configuração que contempla muitos dos problemas vistos em um cenário real. Utilizando-se de uma unidade central de controle, ele primeiro propõe quatro robôs em pontos diferentes do espaço, orientados em qualquer sentido à rodear um ponto qualquer no espaço, com auxilio da \emph{webcam} e do computador (unidade central de comando). O que se aproxima bastante deste trabalho, diferindo-se principalmente no que diz respeito à \emph{webcam} como sensor de alimentação do sistema.
 
-\begin{verbatim}
-@Book{linked,
-   author = {A. L. Barabasi},
-   title = {Linked: The New Science of Networks},
-   publisher = {Perseus Publishing},
-   year = {2002},
-}
-\end{verbatim}
+Outro trabalho também muito interessante que pode-se citar é o do \citeonline{casini2011lego}, ele propõe um laboratório remoto utilizando o \emph{LEGO\textregistered  Mindstorms}. O trabalho se resume  a um laboratório remoto para estudos de robótica móvel, em que tem-se um espaço de cerca de 13 metros quadrados que é filmado por duas câmeras, onde os robôs ficam e podem se movimentar. Foi então desenvolvida uma interface gráfica de acesso online ao laboratório, através da qual os usuários podem acessar e utilizar o laboratório para o estudo de robótica móvel. 
 
-A citação deste livro se faz da seguinte forma \verb#\cite{linked}# e o resultado fica assim \cite{linked}.
-Para os artigos em {\textit journals}, veja por exemplo \cite{acmsurveys},
-descrito da seguinte forma no arquivo {\ttfamily .bib}:
-
-\begin{verbatim}
-@article{acmsurveys,
-   author    = {Deepayan Chakrabarti and Christos Faloutsos},
-   title     = {Graph mining: Laws, generators},
-   journal   = {ACM Computing Surveys},
-   volume    = {38},
-   number    = {1},
-   year      = {2006},
-   pages     = {2-59},
-   publisher = {ACM},
-   address   = {New York, NY, USA},
-}
-\end{verbatim}
-
-O artigo \cite{3faloutsos} foi publicado em conferência. Embora
-às vezes seja difícil distinguir um artigo publicado em {\textit
- journal} de um artigo publicado em conferência, esta distinção é
-fundamental. Em caso de dúvida, procure ajuda de seu orientador.
-
-Veja também duas citações juntas \cite{rp99,mar00} e como citar
-endereços Web \cite{irl:06}.
-O trabalho realizado para editar as citações no formato correto é
-compensado por uma bibliografia impecável.
-
-\section{Citações livres}\label{citacoesLivres}
-Citações são trechos transcritos ou informações retiradas das publicações consultadas para a realização do trabalho.
-As citações são utilizadas no texto com o propósito de esclarecer, completar, embasar ou corroborar as ideias do autor.
-
-Todas as publicações consultadas e efetivamente utilizadas (através de citações) devem ser listadas, obrigatoriamente, nas referências bibliográficas, de forma a preservar os direitos autorais e intelectuais.
-
-Na utilização de citações, normalmente, utiliza-se referências.
-Para cada tipo de referência presente no texto será apresentado um exemplo do comando utilizado para criá-lo.
-
-Há basicamente dois tipos de citações: citações livres e citações literais.
-
-Nas citações livres, reproduzem-se as ideias e informações de um autor, sem, entretanto, ``copiar letra por letra'' o texto do autor.
-Há várias maneiras de se fazer uma citação livre, como mostra os exemplos abaixo.
-
-Por outro lado, \citeonline{maturana:2003} defende um princípio de lógica.
-Para o autor, quando dizemos \ldots
-
-Além disso, \citeonline{teste:2004} argumenta que \ldots\mbox{ }Observe o detalhe do termo \textit{et al}.
-que deve ser utilizado quando o trabalho citado possui mais de três autores.
-Esse recurso é automatizado pelo estilo {\ttfamily abntex2}\index{ABNT!abntex2}.
-Caso não haja desejo em abreviar o nome dos demais autores através do termo \textit{et al.}, deve-se incluir a opção {\ttfamily abnt-no-etal-label}.
-
-Para evitar uma interrupção na sequência do texto, o que poderia, eventualmente, prejudicar a leitura, pode-se indicar a fonte entre parênteses imediatamente após a citação livre.
-Porém, neste caso específico, o nome do autor deve vir em caixa alta, seguido do ano da publicação, como no exemplo a seguir.
-
-A física, então, constituiu-se como a prova mínima da efetividade do método científico para descobrir as verdades do universo \cite{teste:2004,maturana:2003}.
-
-
-\section{Citações literais}\label{citacoesLiterais}
-Nas citações literais, reproduzem-se as ideias e informações de um autor, exatamente como este a expressou, ou seja, faz-se uma ``cópia letra por letra'' do texto do autor.
-Há várias maneiras de se fazer uma citação literal, como mostra os exemplos abaixo.
-
-As citações longas (mais de 3 linhas) devem usar um parágrafo específico para ela, na forma de um texto recuado (4 cm da margem esquerda), com tamanho de letra menor do aquela utilizada no texto e espaçamento simples entre as linhas, seguido dos sobrenomes dos autores em caixa alta (separados por ponto e vírgula), ano de publicação e número da página.
-Veja o exemplo abaixo.
-
-\begin{citacao}
-Desse modo, opera-se uma ruptura decisiva entre a reflexividade filosófica, isto é a possibilidade do sujeito de pensar e de refletir, e a objetividade científica.
-Encontramo-nos num ponto em que o conhecimento científico está sem consciência.
-Sem consciência moral, sem consciência reflexiva e também subjetiva.
-Cada vez mais o desenvolvimento extraordinário do conhecimento científico vai tornar menos praticável a própria possibilidade de reflexão do sujeito sobre a sua pesquisa \cite[p.~28]{morinmoigne:2000}.
-\end{citacao}
-
-Para se criar o efeito demonstrado na citação anterior, deve-se utilizar o comando:
-\begin{verbatim}
-    \begin{citacao}
-        <citacao>
-    \end{citacao}
-\end{verbatim}
-
-Opcionalmente, pode-se referenciar os autores no corpo de texto (neste caso seus nomes devem vir em minúsculas), e em seguida colocar a citação literal, em um novo parágrafo recuado.
-Note que pode após a citação literal não mais aparece o nome dos autores, visto que já se encontra no texto.
-Veja o exemplo seguinte.
-
-\citeonline[p.~33]{morinmoigne:2000}, ao fazerem as suas críticas à ciência, explicitam uma ideia coletiva:
-
-\begin{citacao}
-Mas o curioso é que o conhecimento científico que descobriu os meios realmente extraordinários para, por exemplo, ver aquilo que se passa no nosso sol, para tentar conceber a estrutura das estrelas extremamente distantes, e até mesmo para tentar pesar o universo, o que é algo de extrema utilidade, o conhecimento científico que multiplicou seus meios de observação e de concepção do universo, dos objetos, está completamente cego, se quiser considerar-se apenas a si próprio!
-\end{citacao}
-
-As citações curtas (menos de 3 linhas) devem ser inseridas diretamente no texto (entre aspas), seguida do nome do autor (em caixa alta), ano e página, como no exemplo a seguir.
-
-Então significa apenas que ``assumo que não posso fazer referência a entidades independentes de mim para construir meu explicar'' \cite[p.~35]{maturana:2003}.
-
-O conhecimento de \citeonline[p.~35]{maturana:2003} aponta que isto significa apenas que ``assumo que não posso fazer referência a entidades independentes de mim para construir meu explicar''.
-
-Finalmente, e isto vale para citações curtas ou longas, caso seja necessário inserir, no meio de uma citação uma palavra ou frase curta de sua autoria, que sirva para clarear ou completar a frase do autor citado, isto deve ser feito colocando a citação entre aspas.
-O comentário deverá ser inserido sem aspas.
-Ou seja, todo texto da citação deverá ficar envolvido por aspas.
-O exemplo abaixo apresenta o resultado esperado.
-
-Significa apenas que ``assumo que não posso fazer referência a entidades'' objetivas no sentido tradicional ``independentes de mim para construir meu explicar'' {\citeonline[p.~35]{maturana:2003}}.
-
-\section{Informações sobre as referências utilizadas}\label{referenciasUtilizadas}
-
-Nesta seção serão apresentadas os comandos necessários para a criação das referências utilizadas anteriormente.
-As informações serão apresentadas da seguinte maneira:
-
-\begin{itemize}
-    \item \citeonline{maturana:2003}\\ \verb|\citeonline{maturana:2003}|
-    \item \citeonline{teste:2004}\\ \verb|\citeonline{teste:2004}|
-    \item \cite[p.~28]{morinmoigne:2000}\\ \verb|\cite[p.~28]{morinmoigne:2000}|
-    \item \citeonline[p.~33]{morinmoigne:2000}\\ \verb|\citeonline[p.~33]{morinmoigne:2000}|
-    \item \cite[p.~35]{maturana:2003}\\ \verb|\cite[p.~35]{maturana:2003}|
-    \item \citeonline[p.~35]{maturana:2003}\\ \verb|\citeonline[p.~35]{maturana:2003}|
-    \item \cite{teste:2004,maturana:2003}\\ \verb|\cite{teste:2004,maturana:2003}|
-\end{itemize}
