--- a/main.tex
+++ b/main.tex
@@ -88,24 +88,24 @@
     %\include{./01-elementos-pre-textuais/epigrafe}          % Epígrafe
     %\include{./01-elementos-pre-textuais/resumo-pt}         % Resumo na língua vernácula
     %\include{./01-elementos-pre-textuais/resumo-en}         % Resumo em língua estrangeira
-    %\include{./01-elementos-pre-textuais/lista-figuras}     % Lista de figuras
+    \include{./01-elementos-pre-textuais/lista-figuras}     % Lista de figuras
     %\include{./01-elementos-pre-textuais/lista-tabelas}     % Lista de tabelas
-    %\include{./01-elementos-pre-textuais/lista-quadros}     % Lista de quadros
+    \include{./01-elementos-pre-textuais/lista-quadros}     % Lista de quadros
     %\include{./01-elementos-pre-textuais/lista-algoritmos}  % Lista de algoritmos
-    %\include{./01-elementos-pre-textuais/lista-siglas}      % Lista de abreviaturas e siglas
-    %\include{./01-elementos-pre-textuais/lista-simbolos}    % Lista de símbolos
+    \include{./01-elementos-pre-textuais/lista-siglas}      % Lista de abreviaturas e siglas
+    \include{./01-elementos-pre-textuais/lista-simbolos}    % Lista de símbolos
     \include{./01-elementos-pre-textuais/sumario}           % Sumário
 
     % Elementos textuais
     \textual
     \include{./02-elementos-textuais/introducao}            % Introdução
-    %\include{./02-elementos-textuais/trab-relacionados}     % Trabalhos relacionados
-    %\include{./02-elementos-textuais/fund-teorica}          % Fundamentação teórica
+    \include{./02-elementos-textuais/trab-relacionados}     % Trabalhos relacionados
     \include{./02-elementos-textuais/metodologia}           % Metodologia
-    %\include{./02-elementos-textuais/desenhoemodelo}		%Desenho e Modelo do Sistema
+    \include{./02-elementos-textuais/fund-teorica}          % Fundamentação teórica
+    \include{./02-elementos-textuais/desenhoemodelo}		%Desenho e Modelo do Sistema
     
     \include{./02-elementos-textuais/resultados}            % Resultados
-    %\include{./02-elementos-textuais/conclusao}             % Conclusão
+    \include{./02-elementos-textuais/conclusao}             % Conclusão
 
     % Elementos pós textuais
     \postextual
